# FuzzyFilter

./: README.md  pyproject.toml
data/: bad_words.csv
src/: main.py
